--- a/.env.example
+++ b/.env.example
@@ -6,105 +6,105 @@
 # 1. Notion MCP Server
 ###############################################
 NOTION_MCP_HEADERS={"Authorization":"Bearer <YOUR_NOTION_PAT>","Notion-Version":"2022-06-28"}
-NOTION_HOST_PORT=8100
+NOTION_HOST_PORT=<YOUR_NOTION_HOST_PORT>
 
 ###############################################
 # 2. 21st-Dev Magic MCP Server
 ###############################################
 MAGIC_API_KEY=<YOUR_MAGIC_API_KEY>
-MAGIC_HOST_PORT=8101
+MAGIC_HOST_PORT=<YOUR_MAGIC_HOST_PORT>
 
 ###############################################
 # 3. Filesystem MCP Server
 ###############################################
-FILESYSTEM_HOST_PATH=<ABSOLUTE_PATH_TO_SHARE>   # e.g., C:\DEV-MNKY\your-folder
-FILESYSTEM_HOST_PORT=8102
+FILESYSTEM_HOST_PATH=<ABSOLUTE_PATH_TO_SHARE>
+FILESYSTEM_HOST_PORT=<YOUR_FILESYSTEM_HOST_PORT>
 
 ###############################################
 # 4. Discord MCP Server
 ###############################################
 DISCORD_TOKEN=<YOUR_DISCORD_TOKEN>
 DISCORD_BOT_PERMISSIONS=<YOUR_DISCORD_BOT_PERMISSIONS>
-DISCORD_HOST_PORT=8103
+DISCORD_HOST_PORT=<YOUR_DISCORD_HOST_PORT>
 
 ###############################################
 # 5. Sequential Thinking MCP Server
 ###############################################
-SEQUENTIAL_THINKING_HOST_PORT=8104
+SEQUENTIAL_THINKING_HOST_PORT=<YOUR_SEQUENTIAL_THINKING_HOST_PORT>
 
 ###############################################
 # 6. Brave Search MCP Server
 ###############################################
-BRAVE_API_KEY=BSArD2QB4pyWBoLUP2dxCv2qZkAz79l
-BRAVE_SEARCH_HOST_PORT=8105
+BRAVE_API_KEY=<YOUR_BRAVE_API_KEY>
+BRAVE_SEARCH_HOST_PORT=<YOUR_BRAVE_SEARCH_HOST_PORT>
 
 ###############################################
 # 7. Tavily Search MCP Server
 ###############################################
-TAVILY_API_KEY=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
-TAVILY_HOST_PORT=8106
+TAVILY_API_KEY=<YOUR_TAVILY_API_KEY>
+TAVILY_HOST_PORT=<YOUR_TAVILY_HOST_PORT>
 
 ###############################################
 # 8. Firecrawl MCP Server
 ###############################################
-FIRECRAWL_API_URL=https://api.firecrawl.dev/v1
-FIRECRAWL_RETRY_MAX_ATTEMPTS=5
-FIRECRAWL_RETRY_INITIAL_DELAY=2000
-FIRECRAWL_RETRY_MAX_DELAY=30000
-FIRECRAWL_RETRY_BACKOFF_FACTOR=3
-FIRECRAWL_CREDIT_WARNING_THRESHOLD=2000
-FIRECRAWL_CREDIT_CRITICAL_THRESHOLD=500
-FIRECRAWL_API_KEY=fc-38c356eab8bb481e9c54a0ea7b87217d
-FIRECRAWL_HOST_PORT=8107
+FIRECRAWL_API_URL=<YOUR_FIRECRAWL_API_URL>
+FIRECRAWL_RETRY_MAX_ATTEMPTS=<YOUR_FIRECRAWL_RETRY_MAX_ATTEMPTS>
+FIRECRAWL_RETRY_INITIAL_DELAY=<YOUR_FIRECRAWL_RETRY_INITIAL_DELAY>
+FIRECRAWL_RETRY_MAX_DELAY=<YOUR_FIRECRAWL_RETRY_MAX_DELAY>
+FIRECRAWL_RETRY_BACKOFF_FACTOR=<YOUR_FIRECRAWL_RETRY_BACKOFF_FACTOR>
+FIRECRAWL_CREDIT_WARNING_THRESHOLD=<YOUR_FIRECRAWL_CREDIT_WARNING_THRESHOLD>
+FIRECRAWL_CREDIT_CRITICAL_THRESHOLD=<YOUR_FIRECRAWL_CREDIT_CRITICAL_THRESHOLD>
+FIRECRAWL_API_KEY=<YOUR_FIRECRAWL_API_KEY>
+FIRECRAWL_HOST_PORT=<YOUR_FIRECRAWL_HOST_PORT>
 
 ###############################################
 # 9. Fetch MCP Server
 ###############################################
-FETCH_HOST_PORT=8108
+FETCH_HOST_PORT=<YOUR_FETCH_HOST_PORT>
 
 ###############################################
 # 10. Playwright MCP Server
 ###############################################
-PLAYWRIGHT_HOST_PORT=8109
+PLAYWRIGHT_HOST_PORT=<YOUR_PLAYWRIGHT_HOST_PORT>
 
 ###############################################
 # 11. GitHub MCP Server
 ###############################################
 GITHUB_PERSONAL_ACCESS_TOKEN=<YOUR_GITHUB_PERSONAL_ACCESS_TOKEN>
-GITHUB_HOST_PORT=8110
+GITHUB_HOST_PORT=<YOUR_GITHUB_HOST_PORT>
 
 ###############################################
 # 12. Desktop Commander MCP Server
 ###############################################
-DESKTOP_COMMANDER_HOST_PORT=8111
+DESKTOP_COMMANDER_HOST_PORT=<YOUR_DESKTOP_COMMANDER_HOST_PORT>
 
 ###############################################
 # 13. Supabase-Dev (Postgres MCP) Server
 ###############################################
-SUPABASE_DEV_CONN=postgresql://postgres:postgres@127.0.0.1:54322/postgres
-SUPABASE_DEV_HOST_PORT=8112
+SUPABASE_DEV_CONN=<YOUR_SUPABASE_DEV_CONNECTION_URL>
+SUPABASE_DEV_HOST_PORT=<YOUR_SUPABASE_DEV_HOST_PORT>
 
 ###############################################
 # 14. Context7 MCP Server
 ###############################################
-CONTEXT7_HOST_PORT=8113
+CONTEXT7_HOST_PORT=<YOUR_CONTEXT7_HOST_PORT>
 
 ###############################################
 # 15. YouTube Transcript MCP Server
 ###############################################
-YOUTUBE_TRANSCRIPT_HOST_PORT=8114
+YOUTUBE_TRANSCRIPT_HOST_PORT=<YOUR_YOUTUBE_TRANSCRIPT_HOST_PORT>
 
 ###############################################
 # 16. Redis (for Memory MCP)
 ###############################################
-REDIS_HOST_PORT=6379
+REDIS_HOST_PORT=<YOUR_REDIS_HOST_PORT>
 
 ###############################################
 # 17. Memory MCP Server
 ###############################################
-MEMORY_HOST_PORT=8115
+MEMORY_HOST_PORT=<YOUR_MEMORY_HOST_PORT>
 
 ###############################################
 # 18. @magicuidesign/mcp MCP Server
 ###############################################
-MAGICUIDESIGN_HOST_PORT=8116
+MAGICUIDESIGN_HOST_PORT=<YOUR_MAGICUIDESIGN_HOST_PORT>
